_sass/_homepage.scss
/*  bio sections */

@import 'variables';
@import 'typography';
@import 'layout';

section{

  @include standard-content-layout;

}

.bio{
  height: 50vh;
  min-height: 700px;
}

.bio-in-brief {

  @include standard-content-layout;

  @media only screen and (min-width: $min-width) {
    margin: $grid-unit * 8;
  }

  position: relative;
  padding: 0;

  display: flex;
  align-items: center;

  .bio-wrapper{
    display: block;
    margin: auto;
    text-align: center;

    p{
      @include large-content-font;
    }
  }
}

.bio-image{

  @include standard-content-layout;
  display: block;
  position: relative;
  padding: 0;
  margin-top: $grid-unit*4;
  margin-bottom: $grid-unit*4;

  img{
    margin: auto;
    display: block;
  }
}

.problem-statement{
  min-height: 70vh;

  text-align: center;

  h3{
    font-weight: 700;

  }
  p{
    font: $large-content-font;
    max-width: $grid-unit*120;
    margin: auto;
  }

}


//Homepage section specifics
section {

  magrin-bottom: $grid-unit * 4;

  .section-title{
    margin-bottom: 4*$grid-unit;
    margin-top: 0;

    @media only screen and (min-width: $min-width) {
      margin-bottom: 6*$grid-unit;
    }

    h2 {
      display: inline-block;
      padding-bottom: 2px;
      margin-bottom: $grid-unit;
      margin-top: 0;
      padding-top: 0;

      /* anchor styling */
      a{
        color: $neutral-dark;
        pointer-events: none;
      }
    }

    .description{


      margin-bottom: 12*$grid-unit;
      margin-top: 2*$grid-unit;
      @include regular-content-font;
    }
  }
}

/*contact form*/
section.contact{
  @include full-content-layout;
  @include grid-template;

  height: 100vh;
  background: #27335B;



  form{
    background: white;
    display: block;
    grid-column-start: 5;
    grid-column-end: 11;
    margin-top: 20vh;
  }
}


/* my work */
.my-work{

  @include full-content-layout;
  @include grid-template;

  .description{
    @include full-content-layout;
    @include grid-template;

    min-height: 90vh;
    @include regular-content-font;

    .title{
      @include content-title-font;
    }

    .preview-image{
      width: 100%;
    }
    .preview-image img{
      width: 100%;
    }

    &.full{
      .text{
        @include standard-content-layout;

        margin: auto;
      }
      .preview-image{
        @include wide-content-layout;

        margin: auto;
      }

    }

    &.right{

      .preview-image{
        margin: auto;
        @media only screen and (min-width: $min-width) {
          display: block;
          grid-column-start: 7;
          grid-column-end: 13;
        }
      }

      .text{
        margin: auto;
        display: block;
        grid-column-start: 2;
        grid-column-end: 7;
      }
    }

    &.left{

      .preview-image{
        margin: auto;
        @media only screen and (min-width: 800px) {
          display: block;
          grid-column-start: 2;
          grid-column-end: 9;
        }
      }

      .text{
        margin: auto;
        display: block;
        grid-column-start: 9;
        grid-column-end: 14;
      }
    }

  }

}

/* articles section */
.articles {



  .article{

    display: flex;

    margin: $grid-unit*-4;
    padding: $grid-unit*4;

    margin-bottom: $grid-unit * 8;

    color: $neutral-dark;

      img.preview{
        display: none;
        width: $grid-unit*28;
        height: $grid-unit*18;
        margin-left: $grid-unit*8;
        border-radius: $grid-unit;
        object-fit: cover;

        @media only screen and (min-width: $min-width) {
          display: inline-block;
        }
      }

      .description{
        flex: 1;

          .title{
            @include content-title-font;
            display: block;

            margin-top: 0;
          }
          .summary{
            display: block;
          }

      }

    }

    .article:hover{
      background: $neutral-light-4;
      cursor:pointer;
      text-decoration: none;

      h3{
        text-decoration: underline;
      }
    }



}

.company{

  .company-header{
    padding: 0;

  }

  .case-studies{

    margin: 0 $grid-unit*-1 $grid-unit*10 0;

    display: grid;
    grid-template-columns: repeat(1, 100%);

    @media only screen and (min-width: $min-width) {
      grid-template-columns: repeat(2, 50%);
    }

    .case-study h3{
      padding-top: 0;
      margin: 0;
    }

    .case-study p{
      padding-top: $grid-unit*2;
      margin: 0;
    }

    .case-study{
      display: block;
      padding: 0;
      color: $neutral-dark;
      margin: 0 $grid-unit*-2 0 $grid-unit*-2;
    }


    @media only screen and (min-width: $min-width) {
      .case-study:nth-child(even){margin: 0 $grid-unit*-4 0 0; padding: $grid-unit * 4;}
      .case-study:nth-child(odd){margin: 0 $grid-unit*4 0 $grid-unit*-4; padding: $grid-unit * 4;}
    }

    .case-study:hover{
      background: $neutral-light-4;
      cursor:pointer;
      text-decoration: none;

      h3{
        text-decoration: underline;
      }
    }
  }


}

